Design skeleton complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="square_root">√</string>
     <string name="dot">.</string>
     <string name="_0">0</string>
+    <string name="sumText">""</string>
+    <string name="calculatetext">0</string>
 </resources>
