--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="_8">8</string>
     <string name="_3">3</string>
     <string name="sum">=</string>
-    <string name="multiply">X</string>
+    <string name="multiply">x</string>
     <string name="ac">AC</string>
     <string name="x_2">x^</string>
     <string name="divide">÷</string>
